feat: init asana

--- a/lefthook.yml
+++ b/lefthook.yml
@@ -1,6 +1,6 @@
 pre-commit:
   jobs:
-    - run: pnpm dlx ultracite fix
+    - run: pnpm exec ultracite fix
       glob:
         - "**/*.js"
         - "**/*.jsx"
