--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
   "scripts": {
     "deploy": "wrangler deploy",
     "dev": "wrangler dev",
-    "cf-typegen": "wrangler types",
+    "cf:deploy": "wrangler deploy --minify",
+    "cf:typegen": "wrangler types --env-interface CloudflareBindings --env-file .dev.vars.example",
     "check": "ultracite check",
     "fix": "ultracite fix",
     "prepare": "lefthook install"
   },
   "devDependencies": {
-    "@biomejs/biome": "2.4.0",
+    "@biomejs/biome": "2.4.4",
     "@types/node": "^25.3.0",
     "lefthook": "^2.1.1",
     "typescript": "^5.5.2",
@@ -20,6 +21,7 @@
   },
   "dependencies": {
     "discord.js": "^14.25.1",
-    "hono": "^4.12.2"
+    "hono": "^4.12.2",
+    "zod": "^4.3.6"
   }
 }
