--- a/tsconfig.json
+++ b/tsconfig.json
@@ -36,7 +36,10 @@
 
     /* Skip type checking all .d.ts files. */
     "skipLibCheck": true,
-    "types": ["./worker-configuration.d.ts", "node"]
+    "types": ["./worker-configuration.d.ts", "node"],
+    "paths": {
+      "@/*": ["./src/*"]
+    }
   },
   "exclude": ["test"],
   "include": ["worker-configuration.d.ts", "src/**/*.ts"]
