--- a/tsconfig.json
+++ b/tsconfig.json
@@ -37,6 +37,7 @@
     /* Skip type checking all .d.ts files. */
     "skipLibCheck": true,
     "types": ["./worker-configuration.d.ts", "node"],
+    "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"]
     }
