feat: github create issue

--- a/.dev.vars.example
+++ b/.dev.vars.example
@@ -1,4 +1,12 @@
 ASANA_PAT_SECRET=""
-ASANA_WEBHOOK_SECRET=""
+
+ASANA_APP_CLIENT_ID=""
+ASANA_APP_CLIENT_SECRET=""
 
 DISCORD_BOT_TOKEN=""
+DISCORD_PUBLIC_KEY=""
+DISCORD_APPLICATION_ID=""
+
+GITHUB_PAT_SECRET=""
+
+ASANA_WEBHOOK_SECRET=""
