--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "prepare": "lefthook install"
   },
   "dependencies": {
+    "discord-interactions": "^4.4.0",
     "discord.js": "^14.25.1",
     "hono": "^4.12.2",
     "zod": "^4.3.6"
